Feat: activate vxlan bridge state Separate the management on vxlan bridge state to another api
